Cleaning/Preparing the project

--- a/.env.example
+++ b/.env.example
@@ -1,10 +1,11 @@
 APP_ENV=local
 APP_DEBUG=true
 APP_KEY=SomeRandomString
+APP_LOG=daily
 
 DB_HOST=localhost
-DB_DATABASE=homestead
-DB_USERNAME=homestead
+DB_DATABASE=laravel_forum
+DB_USERNAME=root
 DB_PASSWORD=secret
 
 CACHE_DRIVER=file
