--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
 {
-  "private": true,
-  "devDependencies": {
-    "gulp": "^3.8.8"
-  },
-  "dependencies": {
-    "laravel-elixir": "^4.0.0",
-    "bootstrap-sass": "^3.0.0"
-  }
+    "private": true,
+    "devDependencies": {
+        "gulp": "^3.8.8",
+        "laravel-elixir-vueify": "^1.0.0",
+        "vue": "^1.0.10"
+    },
+    "dependencies": {
+        "laravel-elixir": "^4.0.0"
+    }
 }
