--- a/bower.json
+++ b/bower.json
@@ -11,6 +11,7 @@
     "tests"
   ],
   "dependencies": {
-    "material-design-lite": "~1.0.6"
+    "material-design-lite": "~1.0.6",
+    "font-awesome": "~4.5.0"
   }
 }
