--- a/composer.json
+++ b/composer.json
@@ -7,7 +7,9 @@
     "require": {
         "php":               ">=5.5.9",
         "laravel/framework": "5.2.*",
-        "predis/predis":     "^1.0"
+        "predis/predis":     "^1.0",
+        "laravelcollective/html": "5.2.*-dev"
+
     },
     "require-dev": {
         "fzaninotto/faker":            "~1.4",
